Move the blue border from the bottom of the site header to the top of elements that meet the site header, in preparation for admin pages and error pages.

--- a/public/css/sass-modules/_header.scss
+++ b/public/css/sass-modules/_header.scss
@@ -1,8 +1,7 @@
 body > header {
     border-top: .4em solid $color-accent;
-    border-bottom: .4em solid $color-accent;
     box-sizing: border-box;
-    height: 4.35rem;
+    height: $siteHeaderHeight;
 
     > .container {
         margin: 0 auto 0;
