--- a/public/css/sass-modules/_layout.scss
+++ b/public/css/sass-modules/_layout.scss
@@ -2,8 +2,9 @@
 .admin #content-panel { }
 
 .content-container {
+    border-top: .4em solid $color-accent;
     position: absolute;
-        top: 4.35rem;
+        top: $siteHeaderHeight;
         right: 0;
         bottom: 0;
         left: $filters-width;
@@ -18,6 +19,7 @@
             }
         }
         > #panel-one {
+            border-top: .4em solid $color-accent;
             position: absolute;
                 top: ($siteHeaderHeight + $headerBarHeight);
                 bottom: $footerHeight;
@@ -29,6 +31,7 @@
         }
 
         > #content-panel {
+            border-top: .4em solid $color-accent;
             position: absolute;
             top: $siteHeaderHeight;
                 left: 20rem;
@@ -43,6 +46,7 @@
 .eventEdit {
     > main {
         #panel-one {
+            border-top: .4em solid $color-accent;
             bottom: 0;
         }
     }
@@ -50,8 +54,9 @@
 .eventsMap {
     > main {
         > #panel-one {
+            border-top: .4em solid $color-accent;
             position: absolute;
-                top: 4.35rem;
+                top: $siteHeaderHeight;
                 bottom: $footerHeight;
                 left: 0;
             width: $filters-width;
@@ -86,9 +91,10 @@
 .schedule {
     > main {
         > #panel-one {
+            border-top: .4em solid $color-accent;
             overflow-x: auto;
             position: absolute;
-                top: 4.35rem;
+                top: $siteHeaderHeight;
                 bottom: $footerHeight;
                 left: 0;
             width: $filters-width;
@@ -96,7 +102,7 @@
         > #content-panel {
             overflow: auto;
             position: absolute;
-                top: 4.35rem;
+                top: $siteHeaderHeight;
                 left: $filters-width;
                 bottom: 0;
                 right: 0;
