Clean up styles for admin.inc page template, for use in both admin pages (users, people, departments), and error pages.

--- a/public/css/sass-modules/_html-elements.scss
+++ b/public/css/sass-modules/_html-elements.scss
@@ -39,7 +39,10 @@ p {
 }
 address { white-space: pre-line; }
 
-table { margin: 1em 0 1em 0; }
+table {
+    margin: 1em 0 1em 0;
+    width: 100%;
+}
 th { font-weight: $font-weight-heading; }
 td { padding:.25em; }
 thead th { text-align:left; }
