--- a/public/css/sass-modules/_panels.scss
+++ b/public/css/sass-modules/_panels.scss
@@ -219,7 +219,7 @@
     .geography { display:none; }
 }
 
-body:not('.admin') .errorPanel {
+body:not(.admin) .errorPanel {
     background: #fff;
     border-radius: 1em;
     box-shadow: 0 0 3rem 0 rgba(0, 0, 0, .75);
