--- a/public/css/sass-modules/_footer.scss
+++ b/public/css/sass-modules/_footer.scss
@@ -1,29 +1,9 @@
-body {
-    &.eventsMap, &.schedule {
-        > footer {
-            height: $footerHeight;
-            position: absolute;
-                bottom: 0;
-                left: 0;
-            width: 14.5rem;
-        }
-    }
-    &.viewSingle {
-        > footer {
-            height: $footerHeight;
-            position: absolute;
-                bottom: 0;
-                left: 0;
-            width: 20rem;
-            @media screen and (min-width: 84rem) {
-                width: 25rem;
-            }
-        }
-    }
+#panel-one {
     > footer {
         background: $color-footer-background;
         box-sizing: border-box;
         font-size: (13rem/16);
+        height: $footerHeight;
         padding: .5rem;
 
         h2 {
