--- a/public/css/sass-modules/_panels.scss
+++ b/public/css/sass-modules/_panels.scss
@@ -178,30 +178,26 @@
 .filterPanel {
     background: $color-filters-background;
     border-bottom: 1px solid $color-border-input;
+    box-sizing: border-box;
     color: $color-filters-text;
-    overflow-x: auto;
-    padding: .5rem;
-    position: absolute;
-        top: 0;
-        right: 0;
-        bottom: 0;
-        left: 0;
+    margin: 0 0 (-$footerHeight) 0;
+    min-height: 100%;
+    padding: .5rem .5rem ($footerHeight + .5) .5em;
 }
 
 .editPanel {
     background: $color-background-field;
-    overflow: auto;
-    padding: 0 .5rem;
-    position: absolute;
-        top: 0;
-        right: 0;
-        bottom: 0;
-        left: 0;
+    margin: 0 0 (-$footerHeight);
+    overflow: hidden;
+    padding: 0 .5rem $footerHeight;
 }
 
 .detailPanel {
-    overflow: auto;
-    padding: 0 .5rem;
+    box-sizing: border-box;
+    margin: 0 0 (-$footerHeight) 0;
+    min-height: 100%;
+    overflow: hidden;
+    padding: 0 .5rem ($footerHeight + 1) 0;
 
     .title {
         display: inline-block;
