Correct a CSS bug that correctly displayed the map marker icon incorrectly in Microsoft Edge.

--- a/public/css/sass-modules/_panelList.scss
+++ b/public/css/sass-modules/_panelList.scss
@@ -37,7 +37,7 @@
         }
         &.hasGeography {
             &:before {
-                background: url('images/locationMarker-listing.svg') no-repeat 0 0 / 100% 100%;
+                background: url('images/locationMarker-listing.svg') no-repeat 50% 50% / contain;
                 content: ' ';
                 display: block;
                 height: 1rem;
