Creating a save point before re-architecting a responsive SASS module.

--- a/public/css/sass-modules/_header.scss
+++ b/public/css/sass-modules/_header.scss
@@ -10,6 +10,10 @@ body > header {
         position: relative;
         @include clearfix();
 
+        > .showFilterButton {
+            display: none;
+        }
+
         .site {
             &-homeLink {
                 display: inline-block;
