--- a/public/css/sass-modules/_responsiveNav.scss
+++ b/public/css/sass-modules/_responsiveNav.scss
@@ -1,48 +1,178 @@
-.showFilterButton, .hideFilterButton {
-    display: none;
+.showFilterButton {
+    background: $cob-gray;
+    cursor: pointer;
+    position: absolute;
+        top: 0;
+        right: 0;
+    width: 4rem;
 }
-@media screen and (max-width: $window-medium) {
+.hideFilterButton {
+    background: $cob-gray;
+    cursor: pointer;
+    height: 2rem;
+    margin: 0 0 0 auto;
+    overflow: hidden;
+    position: relative;
+    width: 2rem;
+    text-indent: -100rem;
+
+    &:before {
+        background: #fff;
+        content: ' ';
+        display: block;
+        height: (18rem/16);
+        position: absolute;
+            top: (3rem/16);
+            left: (11rem/16);
+        transform: rotate(45deg);
+        width: (2rem/16);
+    }
+    &:after {
+        background: #fff;
+        content: ' ';
+        display: block;
+        height: (2rem/16);
+        position: absolute;
+            top: (11rem/16);
+            left: (3rem/16);
+        transform: rotate(45deg);
+        width: (18rem/16);
+    }
 }
-@media screen and (max-width: $window-large) {
-    .js > .eventsMap {
-        > header {
-            .container {
-                > .showFilterButton {
-                    background: $cob-gray;
-                    cursor: pointer;
-                    display: block;
-                    position: absolute;
-                        top: 0;
-                        right: 0;
-                    width: 3rem;
+@media screen and (min-width: $window-large) {
+    .showFilterButton {
+        display: none;
+    }
+    .hideFilterButton {
+        display: none;
+    }
+}
+
+// Responsive styles for the Filters panel
+
+.js > .eventsMap, .js > .schedule {
+    > main {
+        &:before {
+            background: #000;
+            content: ' ';
+            display: block;
+            opacity: 0;
+            transition: opacity .25s ease-in-out;
+        }
+        > #panel-one {
+            border-top: 0;
+            position: absolute;
+                top: 0;
+                bottom: 0;
+                left: 100%;
+                z-index: 99;
+            overflow-y: auto;
+            width: $filters-width;
+            transition: transform .3s cubic-bezier(0.4, 0, 0.2, 1);
+        }
+
+        &.filters-enabled {
+            &:before {
+                opacity: .7;
+                position: fixed;
+                    top: 0;
+                    right: 0;
+                    bottom: 0;
+                    left: 0;
+                    z-index: 97;
+            }
+            > #panel-one {
+                transform: translate((-$filters-width), 0);
+            }
+        }
+        &.midAnimation {
+            &:before {
+                position: fixed;
+                    top: 0;
+                    right: 0;
+                    bottom: 0;
+                    left: 0;
+                    z-index: 97;
+            }
+        }
+    }
+}
+
+@media screen and (min-width: $window-medium) {
+    .js {
+        > .eventsMap, .schedule {
+            > main {
+                > .content-container {
+                    top: ($siteHeaderHeight);
+                    left: 0;
+                    > .headerBar {
+                        display: block;
+                    }
                 }
             }
         }
+        > .eventsMap{
+            > main {
+                > .content-container {
+                    > #panel-two {
+                        width: $eventsListWidth;
+                        top: $headerBarHeight;
+                    }
+                    #content-panel {
+                        position: absolute;
+                            top: $headerBarHeight;
+                            right: 0;
+                            bottom: 0;
+                            left: $eventsListWidth;
+                        > .mapPanel {
+                            display:block;
+                        }
+                    }
+                }
+            }
+        }
+        > .schedule {
+
+        }
+    }
+}
+
+.js {
+    > .eventsMap {
         > main {
-            > #panel-one {
-                position: absolute;
-                    top: 0;
-                    bottom: 0;
-                    right: 0;
-                    z-index: 99;
-                transform: translate(($filters-width), 0);
-                width: $filters-width;
-                &[data-enabled] {
-                    transition: transform .3s cubic-bezier(0.4, 0, 0.2, 1);
-                }
-                &[data-enabled="true"] {
-                    transform: translate(0, 0);
-                }
-
-
-                .hideFilterButton {
-                    background: $cob-gray;
-                    cursor: pointer;
-                    display: block;
-                    margin: 0 0 0 auto;
-                    width: 3rem;
+            > .content-container {
+                #panel-two {
+                    position: absolute;
+                        top: $siteHeaderHeight;
+                        bottom: 0;
+                    overflow-y: auto;
                 }
             }
         }
     }
 }
+
+// Content rules for Map and Schedule views on Desktop devices
+
+@media screen and (min-width: $window-large) {
+    .js > .eventsMap, .js > .schedule {
+        > main {
+            #panel-one {
+                border-top: .4em solid $cob-blue;
+                top: $siteHeaderHeight;
+                right: auto;
+                left: 0;
+
+            }
+            > .content-container {
+                left: $filters-width;
+                > #panel-two {
+                    top: $headerBarHeight;
+                }
+            }
+        }
+    }
+}
+
+
+// Responsive styles for the Schedule layout
