Fix layout of date input elements on the custom date event filters.

--- a/public/css/sass-modules/_field.scss
+++ b/public/css/sass-modules/_field.scss
@@ -34,7 +34,7 @@ fieldset {
             input {
                 box-sizing: border-box;
                 border: 1px solid $color-border-input;
-                color: $cob-gray-dark;
+                color: $cob-gray-darkest;
                 font-family: $font-family-default;
                 font-size: 1em;
                 padding: .5em;
