Fixes for some reported UI issues on the Edit Event view.

--- a/public/css/sass-modules/_layout.scss
+++ b/public/css/sass-modules/_layout.scss
@@ -76,6 +76,7 @@
                 @media screen and (min-width: 84rem) {
                     left: 25rem;
                 }
+                width: auto;
             }
         }
     }
