--- a/public/css/sass-modules/_panels.scss
+++ b/public/css/sass-modules/_panels.scss
@@ -178,7 +178,7 @@
         font-size: (20rem/16);
         font-weight: 300;
         margin: 0 0 0 .5rem;
-        padding: .1rem 0 .5rem 0;
+        padding: .1rem 0 0 0;
     }
 }
 .eventsMap > main > .headerBar {
